--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,8 +26,8 @@
     "dayjs": "^1.11.10",
     "diff": "^8.0.2",
     "moment": "^2.30.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^7.6.3",
     "react-use-websocket": "^4.5.0",
@@ -35,15 +35,15 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^9.31.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -55,6 +55,6 @@
     "sass": "^1.69.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.0",
-    "vite": "^5.0.0"
+    "vite": "^7.0.4"
   }
 }
