--- a/frontend/package.json
+++ b/frontend/package.json
@@ -54,6 +54,7 @@
     "prettier": "^3.1.1",
     "sass": "^1.69.0",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.0",
     "vite": "^7.0.4"
   }
