--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,6 +51,7 @@ pbr==6.1.1
 platformdirs==4.3.8
 pluggy==1.6.0
 psutil==6.1.1
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pycodestyle==2.14.0
 pycparser==2.22
