--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -52,6 +52,7 @@ platformdirs==4.3.8
 pluggy==1.6.0
 psutil==6.1.1
 psycopg2-binary==2.9.10
+asyncpg==0.31.0
 pyasn1==0.6.1
 pycodestyle==2.14.0
 pycparser==2.22
