--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -13,6 +13,7 @@ charset-normalizer==3.4.2
 click==8.1.8
 coverage==7.9.2
 croniter==6.0.0
+types-croniter==6.0.0.20250626
 cryptography==45.0.5
 distro==1.9.0
 dparse==0.6.4
