--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,20 +1,28 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.14
+aiosignal==1.4.0
 aiosqlite==0.21.0
 alembic==1.13.1
 annotated-types==0.7.0
 anyio==4.9.0
 APScheduler==3.10.4
+asyncpg==0.30.0
+attrs==25.3.0
 Authlib==1.6.0
 bandit==1.7.10
 bcrypt==4.3.0
 black==25.1.0
+boolean.py==5.0
+CacheControl==0.14.3
 certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
 coverage==7.9.2
 croniter==6.0.0
-types-croniter==6.0.0.20250626
 cryptography==45.0.5
+cyclonedx-python-lib==9.1.0
+defusedxml==0.7.1
 distro==1.9.0
 dparse==0.6.4
 factory-boy==3.3.0
@@ -23,8 +31,10 @@ fastapi==0.116.1
 filelock==3.16.1
 flake8==7.3.0
 freezegun==1.2.2
+frozenlist==1.7.0
 gitdb==4.0.12
 GitPython==3.1.44
+gpt_cost_estimator==0.6
 greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
@@ -35,25 +45,34 @@ iniconfig==2.1.0
 isort==6.0.1
 Jinja2==3.1.6
 joblib==1.5.1
+license-expression==30.4.3
+lorem-text==3.0
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==4.0.0
 mccabe==0.7.0
 mdurl==0.1.2
+msgpack==1.1.1
+multidict==6.6.3
 mypy==1.7.1
 mypy_extensions==1.1.0
 nltk==3.9.1
 openai==1.35.3
+packageurl-python==0.17.1
 packaging==25.0
 passlib==1.7.4
 pathspec==0.12.1
 pbr==6.1.1
+pip-api==0.0.34
+pip-requirements-parser==32.0.1
+pip_audit==2.9.0
 platformdirs==4.3.8
 pluggy==1.6.0
+propcache==0.3.2
 psutil==6.1.1
 psycopg2-binary==2.9.10
-asyncpg==0.30.0
+py-serializable==2.0.0
 pyasn1==0.6.1
 pycodestyle==2.14.0
 pycparser==2.22
@@ -62,12 +81,13 @@ pydantic-settings==2.10.1
 pydantic_core==2.23.4
 pyflakes==3.4.0
 Pygments==2.19.2
+PyJWT==2.10.1
+pyparsing==3.2.3
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-PyJWT==2.10.1
 python-multipart==0.0.18
 pytz==2025.2
 PyYAML==6.0.2
@@ -79,19 +99,22 @@ rsa==4.9.1
 ruamel.yaml==0.18.14
 ruamel.yaml.clib==0.2.12
 ruff==0.1.7
-setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
+sortedcontainers==2.4.0
 SQLAlchemy==2.0.36
 starlette==0.47.1
 stashapi==0.1.0
 stevedore==5.4.1
 tenacity==8.3.0
+tiktoken==0.9.0
+toml==0.10.2
 tomlkit==0.13.3
 tqdm==4.67.1
 typer==0.15.4
+types-croniter==6.0.0.20250626
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzlocal==5.3.1
@@ -100,4 +123,4 @@ uvicorn==0.30.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==12.0
-gpt-cost-estimator==0.6
+yarl==1.20.1
