Add core database tests and reorder bulk update endpoint
Implement comprehensive test coverage for database module including
connection management, session handling, and utility functions.
Move bulk update endpoint before single update for better API
organization and add pytest markers for integration tests.

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -5,6 +5,8 @@ python_classes = Test*
 python_functions = test_*
 addopts = --cov=app --cov-report=html --cov-report=term --cov-report=xml -v
 asyncio_mode = auto
+markers =
+    integration: marks tests as integration tests (deselect with '-m "not integration"')
 filterwarnings =
     ignore:'crypt' is deprecated:DeprecationWarning
     ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning
