Add real-time job progress tracking and improve test reliability
- Update frontend to show real-time job progress for analysis plans
- Add job metadata tracking for plan IDs during analysis
- Improve test environment handling to skip background workers
- Add pytest-xdist for parallel test execution
- Fix progress reporting to update per-scene instead of per-batch
- Handle edge cases in task queue shutdown during tests

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -39,14 +39,19 @@ addopts = [
     "--cov-report=xml",
     "-v",
     "--tb=short",
-    "--strict-markers"
+    "--strict-markers",
+    "-n=auto"
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
-    "integration: marks tests as integration tests",
+    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
     "unit: marks tests as unit tests"
 ]
 asyncio_mode = "auto"
+filterwarnings = [
+    "ignore:'crypt' is deprecated:DeprecationWarning",
+    "ignore:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited:RuntimeWarning"
+]
 
 [tool.coverage.run]
 source = ["app"]
