Add cleanup job for stale jobs and old job deletion
Implement automated cleanup job that runs every 30 minutes to:
- Mark timed-out jobs as failed based on job type thresholds
- Delete completed jobs older than 30 days
- Fix job progress tracking edge cases

Also improves plan detail UI with better status indicators and
job progress calculation.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -40,7 +40,7 @@ addopts = [
     "-v",
     "--tb=short",
     "--strict-markers",
-    "-n=auto"
+    "-n=auto"  # Enables parallel test execution. If this causes errors, ensure you're running in a virtualenv with pytest-xdist installed
 ]
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
