Fix job update race condition and simplify test setup
Refactor job status updates to eliminate duplicate database fetches
and potential race conditions. Pass job object through update chain
to ensure consistent state. Also remove pytest-cov from CI workflows
and add pytest-xdist for parallel test execution.

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,12 +20,12 @@ jobs:
       run: |
         cd backend
         pip install -r requirements.txt
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov pytest-xdist
         
     - name: Run backend tests
       run: |
         cd backend
-        pytest -v
+        pytest
   
   frontend-tests:
     name: Frontend Tests
@@ -72,7 +72,7 @@ jobs:
       run: |
         cd backend
         pip install -r requirements.txt
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov pytest-xdist
         
     - name: Install frontend dependencies
       run: |
