--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,12 +33,12 @@ jobs:
         cd backend
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov pytest-xdist
         
     - name: Run tests
       run: |
         cd backend
-        python -m pytest -v --cov=app --cov-report=xml --cov-report=term-missing
+        python -m pytest
         
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v5
