Add debug endpoint and fix timezone handling for pending scenes
Add a comprehensive debug endpoint to troubleshoot pending scenes
detection issues. Fix the pending scenes count by properly handling
timezone conversions between UTC database timestamps and Stash's
expected Pacific timezone format. The fix removes microseconds and
converts timestamps to Pacific time while formatting as UTC.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -117,6 +117,7 @@ tomlkit==0.13.3
 tqdm==4.67.1
 typer==0.15.4
 types-croniter==6.0.0.20250626
+types-pytz==2025.2.0.20250516
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzlocal==5.3.1
