--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "cronstrue": "^3.0.0",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
     "diff": "^8.0.2",
     "moment": "^2.30.1",
