--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,7 +21,7 @@ click==8.1.8
 coverage==7.10.2
 croniter==6.0.0
 cryptography==45.0.5
-cyclonedx-python-lib==11.0.0
+cyclonedx-python-lib==9.1.0
 defusedxml==0.7.1
 distro==1.9.0
 dparse==0.6.4
@@ -79,7 +79,7 @@ pycodestyle==2.14.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
-pydantic_core==2.37.2
+pydantic_core==2.33.2
 pyflakes==3.4.0
 Pygments==2.19.2
 PyJWT==2.10.1
