--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
-    "@types/diff": "^8.0.0",
+    "@tanstack/react-query": "^5.84.1",
     "@types/moment": "^2.13.0",
     "antd": "^5.26.7",
     "axios": "^1.6.2",
@@ -29,7 +29,6 @@
     "moment": "^2.30.1",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "react-query": "^3.39.3",
     "react-router-dom": "^7.7.1",
     "react-use-websocket": "^4.5.0",
     "zustand": "^5.0.7"
@@ -41,8 +40,8 @@
     "@types/jest": "^29.5.11",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
+    "@typescript-eslint/eslint-plugin": "^8.39.0",
+    "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "eslint": "^9.32.0",
