--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,7 +21,7 @@ click==8.1.8
 coverage==7.10.3
 croniter==6.0.0
 cryptography==45.0.6
-cyclonedx-python-lib==11.0.0
+cyclonedx-python-lib==9.1.0
 defusedxml==0.7.1
 distro==1.9.0
 dparse==0.6.4
