--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,6 +5,11 @@ on:
     branches: [ main ]
     tags: [ 'v*' ]
 
+# Cancel in-progress runs when new commits are pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   # Backend Tests
   backend-tests:
@@ -218,12 +223,55 @@ jobs:
         cd frontend
         npm audit --json || true
 
-  # Docker Build (only on main/develop push)
+  # Docker Build (runs in parallel with tests)
   docker-build:
     if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests, backend-lint, frontend-lint, security-scan]
-    name: Docker Build & Push
+    name: Docker Build (Parallel)
+    permissions:
+      contents: read
+      packages: write
+    outputs:
+      image-tag: ${{ steps.sha.outputs.sha }}
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Get commit SHA
+      id: sha
+      run: echo "sha=sha-${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: Build with cache
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: docker.io/${{ github.repository }}:${{ steps.sha.outputs.sha }}
+        cache-from: type=registry,ref=docker.io/${{ github.repository }}:buildcache
+        cache-to: type=registry,ref=docker.io/${{ github.repository }}:buildcache,mode=max
+        build-args: |
+          BUILDTIME=${{ fromJSON('{"timestamp":""}').timestamp || github.event.head_commit.timestamp }}
+          VERSION=${{ github.ref_name }}
+          REVISION=${{ github.sha }}
+
+  # Docker Push (only after all tests pass)
+  docker-push:
+    if: github.event_name == 'push' && (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop')
+    runs-on: ubuntu-latest
+    needs: [backend-tests, frontend-tests, backend-lint, frontend-lint, security-scan, docker-build]
+    name: Docker Push
     permissions:
       contents: read
       packages: write
@@ -256,16 +304,13 @@ jobs:
           type=sha,prefix=,suffix=,format=short
           type=raw,value=latest,enable={{is_default_branch}}
         
-    - name: Build and push
-      uses: docker/build-push-action@v6
-      with:
-        context: .
-        file: ./Dockerfile
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+    - name: Pull and retag image
+      run: |
+        docker pull docker.io/${{ github.repository }}:${{ needs.docker-build.outputs.image-tag }}
+        for tag in ${{ steps.meta.outputs.tags }}; do
+          docker tag docker.io/${{ github.repository }}:${{ needs.docker-build.outputs.image-tag }} $tag
+          docker push $tag
+        done
         
     - name: Send webhook notification
       uses: distributhor/workflow-webhook@v3
@@ -276,8 +321,15 @@ jobs:
   # All checks passed
   ci-success:
     runs-on: ubuntu-latest
-    needs: [backend-tests, frontend-tests, backend-lint, frontend-lint, security-scan, dependency-check]
+    needs: [backend-tests, frontend-tests, backend-lint, frontend-lint, security-scan, dependency-check, docker-push]
+    if: always()
     name: CI Success
     steps:
-    - name: Success
-      run: echo "All CI checks passed!"
+    - name: Check status
+      run: |
+        if [ "${{ contains(needs.*.result, 'failure') }}" == "true" ]; then
+          echo "One or more jobs failed"
+          exit 1
+        else
+          echo "All CI checks passed!"
+        fi
