--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     branches: [ main ]
 
+# Cancel in-progress runs when new commits are pushed
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   backend-tests:
     name: Backend Tests
@@ -125,20 +130,35 @@ jobs:
         fail-on-severity: high
   
   docker-build-test:
-    name: Test Docker Build
+    name: Test Docker Build (Parallel)
     runs-on: ubuntu-latest
+    # No dependencies - runs in parallel with tests
     steps:
     - uses: actions/checkout@v4
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       
-    - name: Test Docker build
+    - name: Log in to Docker Hub (for cache)
+      uses: docker/login-action@v3
+      with:
+        registry: docker.io
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+      if: ${{ secrets.DOCKER_USERNAME != '' }}
+      
+    - name: Test Docker build with cache
       uses: docker/build-push-action@v6
       with:
         context: .
         file: ./Dockerfile
         push: false
-        tags: stashhog:test
-        cache-from: type=gha
+        tags: stashhog:pr-${{ github.event.pull_request.number }}
+        cache-from: |
+          type=registry,ref=docker.io/${{ github.repository }}:buildcache
+          type=gha
         cache-to: type=gha,mode=max
+        build-args: |
+          BUILDTIME=${{ github.event.pull_request.updated_at }}
+          VERSION=pr-${{ github.event.pull_request.number }}
+          REVISION=${{ github.event.pull_request.head.sha }}
