Fix Docker build issues and optimize CI workflows
- Fix multi-line tag processing in main workflow by reading tags
  line by line instead of using a for loop
- Move Docker login condition check for dependabot compatibility
- Optimize Dockerfile with better layer caching and reduced image size
- Switch from npm install to npm ci for reproducible builds
- Use pip wheels for faster dependency installation
- Combine apt-get commands to reduce layers
- Remove unnecessary files after frontend build
- Fix PostgreSQL library dependency (libpq5 instead of libpq-dev)

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -306,10 +306,16 @@ jobs:
         
     - name: Pull and retag image
       run: |
-        docker pull docker.io/${{ github.repository }}:${{ needs.docker-build.outputs.image-tag }}
-        for tag in ${{ steps.meta.outputs.tags }}; do
-          docker tag docker.io/${{ github.repository }}:${{ needs.docker-build.outputs.image-tag }} $tag
-          docker push $tag
+        SOURCE_IMAGE="docker.io/${{ github.repository }}:${{ needs.docker-build.outputs.image-tag }}"
+        docker pull $SOURCE_IMAGE
+        
+        # Process tags line by line
+        echo "${{ steps.meta.outputs.tags }}" | while IFS= read -r tag; do
+          if [ -n "$tag" ]; then
+            echo "Tagging and pushing: $tag"
+            docker tag $SOURCE_IMAGE "$tag"
+            docker push "$tag"
+          fi
         done
         
     - name: Send webhook notification
