--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -140,12 +140,12 @@ jobs:
       uses: docker/setup-buildx-action@v3
       
     - name: Log in to Docker Hub (for cache)
+      if: github.actor != 'dependabot[bot]'
       uses: docker/login-action@v3
       with:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-      if: ${{ secrets.DOCKER_USERNAME != '' }}
       
     - name: Test Docker build with cache
       uses: docker/build-push-action@v6
