--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -154,10 +154,17 @@ jobs:
         file: ./Dockerfile
         push: false
         tags: stashhog:pr-${{ github.event.pull_request.number }}
+        # Multi-layer cache strategy with scope isolation
         cache-from: |
           type=registry,ref=docker.io/${{ github.repository }}:buildcache
-          type=gha
-        cache-to: type=gha,mode=max
+          type=registry,ref=docker.io/${{ github.repository }}:buildcache-frontend
+          type=registry,ref=docker.io/${{ github.repository }}:buildcache-python
+          type=gha,scope=buildkit-pr
+          type=gha,scope=buildkit-${{ github.workflow }}
+          type=gha,scope=frontend-deps
+          type=gha,scope=python-deps
+        cache-to: |
+          type=gha,scope=buildkit-pr,mode=max
         build-args: |
           BUILDTIME=${{ github.event.pull_request.updated_at }}
           VERSION=pr-${{ github.event.pull_request.number }}
